--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "@types/react-native-vector-icons": "^6.4.10",
     "@ui-kitten/components": "^5.1.2",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-bootstrap-styles": "^4.5.0-r",
+    "react-native-cards": "^1.1.4",
+    "react-native-dynamic-search-bar": "^2.0.2",
     "react-native-gesture-handler": "^2.3.2",
-    "react-native-reanimated": "^2.5.0",
+    "react-native-reanimated": "^2.6.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
-    "react-native-vector-icons": "^9.1.0"
+    "react-native-vector-icons": "^9.1.0",
+    "react-navigation": "^4.4.4",
+    "react-redux": "^7.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
