--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@rematch/persist": "^2.1.2",
     "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-redux": "^7.1.23",
     "@ui-kitten/components": "^5.1.2",
+    "@vve/immer": "^8.4.0-alpha.1",
+    "i18next": "^21.6.14",
+    "npm": "^8.6.0",
     "react": "17.0.2",
+    "react-i18next": "^11.16.2",
     "react-native": "0.68.0",
     "react-native-bootstrap-styles": "^4.5.0-r",
     "react-native-cards": "^1.1.4",
